--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "firebase": "^11.4.0",
+    "framer-motion": "^12.5.0",
+    "ionicons": "^7.4.0",
+    "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
