--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.5.0",
     "ionicons": "^7.4.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "react": "^19.0.0",
